# ugc-server

./: Cargo.toml  README.md  run.sh
.github/workflows/: build.yml
.sqlx/: query-06fc9e108550604e1abf5f9872c17b37cf2b6a13b44e84f89d133b16c05c52d8.json  query-0e3158de9c2a80e70897262d6a260229cfea91884f8d5e822eef03c9188f2b34.json  query-963e77d316f536e5ce152a2da4d0759b431039ff5712fe612992673147ee2ee4.json  query-f0c19091499ee21af1101764215b4d44f4c69a33b2dfcfd7c9b7b41541a16890.json
db/: Cargo.toml
db/src/: message.rs  token.rs
gentoken/: Cargo.toml
gentoken/src/: main.rs
migrations/: 20241223090315_token.sql  20241223101450_message.sql
model/: Cargo.toml
model/src/: data.rs  gateway.rs  lib.rs
server/: Cargo.toml
server/src/: error.rs  main.rs  state.rs  token.rs
server/src/routes/: gateway.rs  message.rs  mod.rs
server/testbot/: bot.py
