[package]
name = "gentoken"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
db = { version = "0.1.0", path = "../db" }
dotenvy = "0.15.7"
getrandom = { version = "0.2.15", features = ["std"] }
sqlx = { workspace = true }
tokio = { version = "1.42.0", features = ["full"] }
