[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
db = { version = "0.1.0", path = "../db" }
dotenvy = "0.15.7"
f = "0.2.0"
futures-util = "0.3.31"
model = { version = "0.1.0", path = "../model" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sqlx.workspace = true
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
